# my-PySelects

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
admin-and-frameworks/: index.html
data-science/: index.html
databases/: index.html
development-tools/: index.html
devops/: index.html
docs/: admin-and-frameworks.md  data-science.md  databases.md  development-tools.md  devops.md  specialized.md  utils.md
search/: search_index.json
specialized/: index.html
utils/: index.html
